# subsocial-solochain

./: .gitignore  Cargo.toml  README.md  types.json
.github/workflows/: docker-build.yml
docker/: Dockerfile
node/: Cargo.toml
node/res/: soonsocial.json  subsocial.json
node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
pallets/df-integration-tests/: Cargo.toml
pallets/df-integration-tests/src/: lib.rs
pallets/domains/: Cargo.toml  types.json
pallets/domains/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
pallets/dotsama-claims/: Cargo.toml
pallets/dotsama-claims/src/: benchmarking.rs  weights.rs
pallets/faucets/: Cargo.toml
pallets/faucets/src/: .lib.rs.swp  benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/free-calls/: Cargo.toml  types.json
pallets/free-calls/rpc/: Cargo.toml
pallets/free-calls/rpc/runtime-api/: Cargo.toml
pallets/free-calls/rpc/runtime-api/src/: lib.rs
pallets/free-calls/rpc/src/: lib.rs
pallets/free-calls/src/: benchmarking.rs  config.rs  lib.rs  mock.rs  quota.rs  quota_strategy.rs  stats.rs  test_pallet.rs  tests.rs  weights.rs
pallets/free_calls/src/: lib.rs
pallets/locker-mirror/: Cargo.toml
pallets/locker-mirror/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/lottery/: Cargo.toml
pallets/lottery/src/: lib.rs  mock.rs
pallets/moderation/: Cargo.toml
pallets/moderation/src/: functions.rs  lib.rs  mock.rs  tests.rs
pallets/onboard/: Cargo.toml
pallets/onboard/src/: lib.rs  mock.rs  tests.rs
pallets/permissions/: Cargo.toml
pallets/permissions/src/: lib.rs
pallets/post-history/: Cargo.toml
pallets/post-history/src/: lib.rs
pallets/post-stats/: Cargo.toml  types.json
pallets/post-stats/src/: lib.rs
pallets/posts/: Cargo.toml  types.json
pallets/posts/rpc/: Cargo.toml
pallets/posts/rpc/runtime-api/: Cargo.toml
pallets/posts/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  rpc.rs
pallets/profile-follows/: Cargo.toml
pallets/profile-follows/rpc/: Cargo.toml
pallets/profile-follows/rpc/runtime-api/: Cargo.toml
pallets/profile-follows/src/: benchmarking.rs  lib.rs  rpc.rs
pallets/profile-history/: Cargo.toml
pallets/profile-history/src/: lib.rs
pallets/profiles/: Cargo.toml
pallets/profiles/rpc/: Cargo.toml
pallets/profiles/rpc/runtime-api/: Cargo.toml
pallets/profiles/rpc/src/: lib.rs
pallets/profiles/src/: benchmarking.rs  lib.rs  rpc.rs
pallets/rate-limiter/: Cargo.toml  types.json
pallets/rate-limiter/src/: lib.rs
pallets/reactions/: Cargo.toml
pallets/reactions/rpc/: Cargo.toml
pallets/reactions/rpc/runtime-api/: Cargo.toml
pallets/reactions/rpc/src/: lib.rs
pallets/reactions/src/: lib.rs  rpc.rs
pallets/roles/: Cargo.toml
pallets/roles/rpc/: Cargo.toml
pallets/roles/rpc/runtime-api/: Cargo.toml
pallets/roles/rpc/src/: lib.rs
pallets/roles/src/: functions.rs  lib.rs  mock.rs  rpc.rs  tests.rs
pallets/scores/src/: lib.rs
pallets/session-keys/: Cargo.toml
pallets/session-keys/src/: mock.rs
pallets/social/: Cargo.toml
pallets/social/src/: lib.rs  tests.rs
pallets/space-follows/: Cargo.toml
pallets/space-follows/rpc/: Cargo.toml
pallets/space-follows/rpc/runtime-api/: Cargo.toml
pallets/space-follows/rpc/src/: lib.rs
pallets/space-follows/src/: benchmarking.rs  lib.rs  rpc.rs
pallets/space-history/: Cargo.toml
pallets/space-history/src/: lib.rs
pallets/space-multi-ownership/src/: tests.rs
pallets/space-ownership/: Cargo.toml
pallets/space-ownership/src/: lib.rs
pallets/space-stats/: Cargo.toml  types.json
pallets/space-stats/src/: lib.rs
pallets/spaces/: Cargo.toml  types.json
pallets/spaces/rpc/: Cargo.toml
pallets/spaces/rpc/runtime-api/: Cargo.toml
pallets/spaces/rpc/src/: lib.rs
pallets/spaces/src/: benchmarking.rs  lib.rs  mock.rs  rpc.rs  weights.rs
pallets/tipping-lottery/: Cargo.toml  types.json
pallets/tipping-lottery/src/: lib.rs  tests.rs
pallets/traits/: Cargo.toml
pallets/traits/src/: lib.rs
pallets/transaction-payment/: Cargo.toml
pallets/transaction-payment/rpc/: Cargo.toml
pallets/transaction-payment/rpc/runtime-api/: Cargo.toml
pallets/transaction-payment/src/: lib.rs
pallets/trust/: Cargo.toml
pallets/trust/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/utils/: Cargo.toml
pallets/utils/src/: lib.rs  mock.rs  mock_functions.rs  rpc.rs  tests.rs
primitives/: Cargo.toml
primitives/src/: currency.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  free_calls.rs  lib.rs  tests.rs
