[package]
name = "pallet-space-stats"
version = "2.0.0"
authors = ["DappForce <dappforce@pm.me>"]
edition = "2018"
license = "GPL-3.0-only"
homepage = "https://subsocial.network"
repository = "https://github.com/dappforce/dappforce-subsocial-node"
description = "Space statistics pallet"
keywords = ["blockchain", "cryptocurrency", "social-network", "news-feed", "marketplace"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ['std']
std = [
    'codec/std',
    'sp-runtime/std',
    'frame-support/std',
    'system/std',
    'pallet-utils/std',
    'pallet-spaces/std',
    'pallet-space-follows/std',
    'pallet-posts/std'
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'

[dependencies.pallet-utils]
default-features = false
path = '../utils'
version = '2.0.0'

[dependencies.pallet-spaces]
default-features = false
path = '../spaces'
version = '2.0.0'

[dependencies.pallet-space-follows]
default-features = false
path = '../space-follows'
version = '2.0.0'

[dependencies.pallet-posts]
default-features = false
path = '../posts'
version = '2.0.0'
