[package]
name = "pallet-transaction-payment"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet to manage transaction payments"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }
sp-std = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, path = './rpc/runtime-api' }
smallvec = "1.4.1"
sp-io = { default-features = false, version = '2.0.1' }
sp-core = { default-features = false, version = '2.0.1' }

[dev-dependencies]
pallet-balances = '2.0.1'
sp-storage = '2.0.1'

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"sp-io/std",
	"sp-core/std",
]
