[package]
name = 'pallet-trust'
version = '0.7.0'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'
description = 'A pallet for storing verified or trusted accounts within Subsocial'
keywords = [
    'blockchain',
    'cryptocurrency',
    'social-network',
    'news-feed',
    'marketplace',
]
categories = ['cryptography::cryptocurrencies']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
bitflags = "1.2"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
    "derive",
] }

df-traits = { default-features = false, path = '../traits' }

frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }

sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }

[dev-dependencies]
serde = { version = '1.0.119' }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-utils = { default-features = false, path = '../utils' }
pallet-balances = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'df-traits/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    'frame-benchmarking/std',

]

runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
