[package]
name = "pallet-transaction-payment-rpc"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "RPC interface for the transaction payment module."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1" }
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"
sp-core = '2.0.1'
sp-rpc = '2.0.1'
serde = { version = "1.0.101", features = ["derive"] }
sp-runtime = '2.0.1'
sp-api = '2.0.1'
sp-blockchain = '2.0.1'
pallet-transaction-payment-rpc-runtime-api = { path = "./runtime-api" }
